--- a/server/views/layout/default.pug
+++ b/server/views/layout/default.pug
@@ -1,6 +1,12 @@
 doctype html
 html
     head
-        title my jade template
+        meta(charset="UTF-8")
+        meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
+        meta(name="renderer" content="webkit|ie-stand|ie-comp")
+        title= title
+        block dynamicCSS
     body
-        h1 #{name}
+        block content
+        include checkBrowser.pug
+        block dynamicJS
