--- a/server/views/todo.pug
+++ b/server/views/todo.pug
@@ -4,7 +4,7 @@ block content
     #mainCtId
 
 block dynamicJS
-    include res/js.html
+    include res/mobx_demo_js.html
 
 block dynamicCSS
-    include res/css.html
+    include res/mobx_demo_css.html
